[package]
name = "webszerver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-form-data = "0.6.2"
actix-web = { version = "4.3.0", features = ["openssl"] }
bcrypt = "0.14.0"
env_logger = "0.10.0"
futures = "0.3.26"
mysql = "23.0.1"
openssl = "0.10.45"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
time = "0.3.19"

[[bin]]
name = "webszerver"
path = "src/main.rs"
